--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.7",
     "@mdi/font": "7.4.47",
+    "axios": "^1.13.5",
     "vue": "^3.5.28",
     "vue-router": "^4.5.1",
     "vuetify": "^3.11.8"
