--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "5.2.7",
     "@mdi/font": "7.4.47",
     "axios": "^1.13.5",
+    "chart": "^0.1.2",
+    "chart.js": "^4.5.1",
     "vue": "^3.5.28",
     "vue-router": "^4.5.1",
     "vuetify": "^3.11.8"
